--- a/docker/elixir/Dockerfile
+++ b/docker/elixir/Dockerfile
@@ -1,6 +1,6 @@
 FROM elixir:1.6-slim
 
-LABEL maintainer="Konstantin Vedenskiy <varlog.err@gmail.com>"
+LABEL maintainer="Varlog <varlog.err@gmail.com>"
 
 ENV TINI_VERSION=v0.16.1 \
     THE_USER=app \
