--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -1,6 +1,6 @@
 FROM ruby:2.5-slim-stretch
 
-LABEL maintainer="Konstantin Vedenskiy <varlog.err@gmail.com>"
+LABEL maintainer="Varlog <varlog.err@gmail.com>"
 
 ENV TINI_VERSION=v0.16.1 \
     THE_USER=app \
