change ruby and golang users

--- a/docker/golang/Dockerfile
+++ b/docker/golang/Dockerfile
@@ -3,9 +3,9 @@ FROM golang:1.10-stretch
 LABEL maintainer="Varlog <varlog.err@gmail.com>"
 
 ENV TINI_VERSION=v0.16.1 \
-    THE_USER=app \
-    THE_GROUP=app \
-    THE_HOME=/home/app
+    THE_USER=golang \
+    THE_GROUP=golang \
+    THE_HOME=/home/golang
 
 ARG THE_USER_ID=1000
 ARG THE_GROUP_ID=1000
@@ -14,7 +14,7 @@ ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /sbin
 
 RUN chmod +x /sbin/tini
 
-# create app user
+# create golang user
 RUN addgroup -q --gid $THE_GROUP_ID $THE_GROUP \
     && adduser -q --disabled-login \
       --ingroup $THE_GROUP \
@@ -25,4 +25,4 @@ RUN addgroup -q --gid $THE_GROUP_ID $THE_GROUP \
 ENTRYPOINT ["/sbin/tini", "--"]
 CMD :
 
-USER app
+USER ${THE_USER}
