--- a/docker/docker-compose.base.yml
+++ b/docker/docker-compose.base.yml
@@ -4,6 +4,6 @@ services:
   base:
     image: debian:9.3
     volumes:
-      - ./app:/app
-      - ./cache:/cache
+      - ./../app:/app
+      - ./../app/_cache:/cache
     command: /bin/bash -c "chown 1000:1000 /{app,cache}"
