--- a/docker/docker-compose.elixir.yml
+++ b/docker/docker-compose.elixir.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: elixir
     volumes:
-      - ./app/elixir:/app
+      - ./../app/elixir:/app
     working_dir: /app
     command: []
 
