--- a/docker/docker-compose.golang.yml
+++ b/docker/docker-compose.golang.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: golang
     volumes:
-      - ./app/golang:/app
+      - ./../app/golang:/app
     working_dir: /app
     command: []
 
